melee weapon update

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -564,6 +564,7 @@
       - 混乱之祈祷
     2:
       items:
+      - 断裂英雄剑
       - 灾劫虚空
       - 混乱石:1:1:0.33
       - 再生护符:1:1:0.1
@@ -915,6 +916,7 @@
       - 恣睢
     2:
       items:
+      - 盖尔大剑
       - 湮灭余烬:30:40
       - 铂金币:30
       - 终极治疗药水:5:15
