--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/weapons.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/weapons.yml
@@ -707,6 +707,35 @@
     interval: 1
     velocity: 3
     name: 携序之剑剑气
+光棱破碎者:
+  type: STAB
+  autoSwing: true
+  size: 4
+光棱破碎者_RIGHT_CLICK:
+  type: SWING
+  autoSwing: true
+  size: 5
+  projectileInfo:
+    interval: 1
+    velocity: 3
+    name: 虹光剑气
+禅心剑:
+  type: SWING
+  autoSwing: true
+  size: 8.5
+盖尔大剑:
+  type: SWING
+  autoSwing: true
+  size: 11
+星流之刃:
+  type: SWING
+  autoSwing: true
+  size: 10
+星流之刃_RIGHT_CLICK:
+  type: STAB
+  size: 12
+  attributes:
+    useTime: 20
 ####
 钴薙刀:
   type: STAB
