exoblade tweak and bugfix

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -3424,7 +3424,7 @@
 星流之刃:
   item: DIAMOND_SWORD
   lore:
-  - §r左键释放大量能量光束追踪并在命中时切碎敌人
+  - §r左键释放能量光束追踪并在命中时切碎敌人
   - §r右键使你向鼠标方向冲刺并斩击
   - §r冲刺时获得充能，若命中敌人则会造成巨量伤害，反弹自己且获得最大充能
   - §r充能将用作强化左键攻击，满充能时本次攻击在命中敌人时爆炸
