melee weapon update

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -3471,9 +3471,10 @@
   lore:
   - §r你的攻击会大幅治疗你
   - §r召唤会分裂的红蓝绿陨石
-  - §r蓝陨石造成冰冻
-  - §r红陨石会爆炸
-  - §r绿陨石生成治疗球
+  - §r蓝陨石造成霜火
+  - §r红陨石会爆炸并造成神圣之火
+  - §r绿陨石造成瘟疫
+  - §r“收了神通吧，卡成PPT了”
   attributes:
     damage: 340
     damageType: Melee
