--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
@@ -1108,7 +1108,6 @@
     gravity: 0
     projectileSize: 0.5
     autoTrace: true
-    autoTraceAbility: 1.5
     isGrenade: true
     blastRadius: 2.5
     trailColor: 255|187|174
@@ -1118,7 +1117,6 @@
     gravity: 0
     projectileSize: 1.5
     autoTrace: true
-    autoTraceAbility: 1.5
     isGrenade: true
     blastRadius: 12.5
     trailColor: 255|187|174
@@ -2755,6 +2753,57 @@ TNT:
     trailSize: 0.15
     trailStepSize: 0.5
     trailLingerTime: 3
+绿色元素光束:
+    gravity: 0
+    liveTime: 15
+    blockHitAction: thru
+    projectileSize: 3
+    clusterBomb:
+        amount: 9
+        damageMulti: 0.4
+        name: 蓝色元素光束
+        velocity: 1.25
+蓝色元素光束:
+    gravity: 0
+    liveTime: 10
+    blockHitAction: thru
+    projectileSize: 3
+    clusterBomb:
+        amount: 5
+        damageMulti: 0.6
+        name: 粉色元素光束
+        velocity: 1.15
+粉色元素光束:
+    gravity: 0
+    liveTime: 8
+    blockHitAction: thru
+    projectileSize: 3
+    clusterBomb:
+        amount: 2
+        damageMulti: 0.8
+        name: 橙色元素光束
+        velocity: 1
+橙色元素光束:
+    gravity: 0
+    liveTime: 20
+    blockHitAction: thru
+    projectileSize: 3
+灵魂鬼爪:
+    gravity: 0
+    liveTime: 100
+    penetration: 2
+    blockHitAction: thru
+    speedMultiPerTick: 0.975
+    projectileSize: 3
+阴险穿刺者鱼叉:
+    gravity: 0
+    liveTime: 60
+    penetration: 9999
+    blockHitAction: stick
+    projectileSize: 3
+    buffInflict:
+        - "硫磺海剧毒|20|1"
+####
 小火花:
     buffInflict:
         - "燃烧|100|0.3"
